--- a/gb/21/1/11/n12679658.md
+++ b/gb/21/1/11/n12679658.md
@@ -1,72 +1,71 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ieyoli3045/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ieyoli3045/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ieyoli3045/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ieyoli3045/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ieyoli3045/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ieyoli3045/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ieyoli3045/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>澳议员吁成立特别委员会 制衡社媒巨头</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/ALEX-ANTIC-SENATOR--600x400.jpg" />
 <h6>1月8日，澳洲参议员安蒂克（Alex Antic）在脸书发帖，呼吁澳洲参议院成立一个特别委员会，调查和评估大科技公司的影响力，保护澳洲民主免受社交媒体的控制。图为澳洲参议员安蒂克（Alex Antic）出席2020CPAC会议。（李睿/大纪元）
 </h6>
 <hr>
-<p>【大纪元2021年01月11日讯】<strong>（</strong>大纪元记者李睿悉尼报导）近日，社交媒体巨头对用户政治观点的不平衡监管和封杀，引起了各国对<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E5%A4%A7%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">大科技公司</a>决策缺乏制衡的关注。</p>
-<p>1月8日，澳洲参议员安蒂克（Alex Antic）在脸书发帖，称<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E5%A4%A7%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">大科技公司</a>已经掌控了非凡的权力，形成了巨大的影响力。为此，他呼吁澳洲参议院成立一个特别委员会，调查和评估大科技公司的影响力，保护<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E6%B0%91%E4%B8%BB.md#1">澳洲民主</a>免受社交媒体的控制。</p>
-<h2><strong>大科技公司不应该成为<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>的仲裁者</strong></h2>
+<p>【大纪元2021年01月11日讯】（大纪元记者李睿悉尼报导）近日，社交媒体巨头对用户政治观点的不平衡审查和封杀，引起了各国对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">大科技公司</a>决策缺乏制衡的关注。</p>
+<p>1月8日，澳洲参议员安蒂克（Alex Antic）在脸书发帖，称<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E7%A7%91%E6%8A%80%E5%85%AC%E5%8F%B8.md#1">大科技公司</a>已经掌控了非凡的权力，形成了巨大的影响力。为此，他呼吁澳洲参议院成立一个特别委员会，调查和评估大科技公司的影响力，保护<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E6%B0%91%E4%B8%BB.md#1">澳洲民主</a>免受社交媒体的控制。</p>
+<h2><strong>大科技公司不应该成为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>的仲裁者</strong></h2>
 <p>1月8日，安蒂克在接受天空新闻专访曾时表示，谷歌、Youtube、推特（Twitter）等大科技公司控制市场，具有巨大的影响力。</p>
-<p>“以Twitter为例，它有13亿用户，每天有2百万至3百万用户在使用Twitter，覆盖面广，影响力巨大”，“ 所以我建议参议院成立特别委员会，调查我们为保护<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E6%B0%91%E4%B8%BB.md#1">澳洲民主</a>需要做些什么”。</p>
-<p>他表示，在澳洲人们已经看到了这些科技巨头所发挥的影响力 ，而且它们几乎只用来反对<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E6%B4%BE.md#1">保守派</a>的声音。</p>
-<p>“<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E6%B4%BE.md#1">保守派</a>评论员的追随者被自动减少”“保守派的思想也不能幸免（被封杀）”， “而左派却欢呼这种取消文化（cancel culture）（的行为）”， “这对澳洲的民主制度是不利的。归根结底，思想的自由交流有利民主”，“必须确保保守派的声音被听到，这对澳洲民主是有好处的，不管你是否同意这些观点”，他说。</p>
+<p>“以Twitter为例，它有13亿用户，每天有200万至300万用户在使用Twitter，覆盖面广，影响力巨大”，“ 所以我建议参议院成立特别委员会，调查我们为保护<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2%E6%B0%91%E4%B8%BB.md#1">澳洲民主</a>需要做些什么”。</p>
+<p>他表示，在澳洲人们已经看到了这些科技巨头所发挥的影响力，而且它们几乎只用来反对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E6%B4%BE.md#1">保守派</a>的声音。</p>
+<p>“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E5%AE%88%E6%B4%BE.md#1">保守派</a>评论员的追随者被自动减少”、“保守派的思想也不能幸免（被封杀）”， “而左派却欢呼这种取消文化（cancel culture）（的行为）”，“这对澳洲的民主制度是不利的。归根结底，思想的自由交流有利民主”，“必须确保保守派的声音被听到，这对澳洲民主是有好处的，不管你是否同意这些观点，”他说。</p>
 <p>安蒂克表示，美国政府正在考虑终止美国《通信规范法案》的第230条款，对此已进行了听证会。</p>
 <p>在美国，230条款被视为Twitter、脸书等大型社媒公司的护身符。该条款赋予了社交媒体企业豁免权，使他们不会因出现在其平台上的内容、或删除了部分内容而遭到起诉。</p>
-<p>安蒂克还表示，波兰政府已经详细拟定了一项新的法律，保护网络<ahref="https://github.com/ieyoli3045/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>，反制大科技公司对用户的言论审查。</p>
-<p>去年年底，波兰司法部长焦布罗(Zbigniew Ziobro)宣布一份法案的草案，打击脸书、推特等社交媒体巨头审查用户言论。根据波兰拟定的法律，如社交媒体公司禁止合法的账号或言论，可面临高达180万欧元的罚款。</p>
+<p>安蒂克还表示，波兰政府已经详细拟定了一项新的法律，保护网络<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">言论自由</a>，反制大科技公司对用户的言论审查。</p>
+<p>去年年底，波兰司法部长焦布罗（Zbigniew Ziobro）宣布一份法案的草案，打击脸书、推特等社交媒体巨头审查用户言论。根据波兰拟定的法律，如社交媒体公司禁止合法的账号或言论，可面临高达180万欧元的罚款。</p>
 <p>1月9日，安蒂克再在脸书发贴表示：“大科技公司不应该成为言论自由的仲裁者”，并重申为保护澳洲民主，澳洲参议院应成立特别调查委员会。<br />
-<a style="border: none; overflow: hidden;" src=></a><img width="600" src="https://raw.githubusercontent.com/ieyoli3045/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ieyoli3045/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSenatorAntic%2Fposts%2F772567043337616&amp;width=500&amp;show_text=true&amp;height=555&amp;appId" width="500" b="555" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></a></p>
-<p>责任编辑：宗敏青</p>
+<a style="border: none; overflow: hidden;" src=></a><a href="https://d2axefeaz3j87r.cloudfront.net/S6lM79iMj"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSenatorAntic%2Fposts%2F772567043337616&amp;width=500&amp;show_text=true&amp;height=555&amp;appId" width="500" b="555" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></a></p>
+<p>责任编辑：宗敏青#</p>
 
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/20/12/3/n12594207.md#1">【思想领袖】汉森：科技独裁下的新世界</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/6/n12669757.md#1">克鲁兹批谷歌推特等科技巨头滥用网络影响力</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12675086.md#1">澳议员：美国会暴乱 左派和假新闻嫁祸川普</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12676806.md#1">推特永久冻结账号 川普将自行搭建平台发声</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/10/n12678349.md#1">围剿川粉？Amazon将关Parler服务器</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679898.md#1">大布里斯本周一晚结束封锁 居民仍需戴口罩</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679808.md#1">患者就诊被查出染疫?西悉尼一医院急诊部关闭</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679871.md#1">大龙虾和红酒将在南澳市场继续打折</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679853.md#1">南澳十年中有数百名新生儿出现戒断症状</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679705.md#1">澳医疗总监：虽推出疫苗?限制仍将持续数月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/3/n12594207.md#1">【思想领袖】汉森：科技独裁下的新世界</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/6/n12669757.md#1">克鲁兹批谷歌推特等科技巨头滥用网络影响力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/8/n12675086.md#1">澳议员：美国会暴乱 左派和假新闻嫁祸川普</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/8/n12676806.md#1">推特永久冻结账号 川普将自行搭建平台发声</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/10/n12678349.md#1">围剿川粉？Amazon将关Parler服务器</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680369.md#1">南澳新内阁亮相 独立议员意外入选</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680115.md#1">洪水升级 新州局部地区逾六千居民被令撤离</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680324.md#1">澳洲首试马格尼茨基人权法 39名俄罗斯人被制裁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680019.md#1">2022财政预算已知政策总览</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680185.md#1">澳洲四分之一12岁以下儿童已接种两剂疫苗</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134744.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/1/n11491427.md#1" target="_blank">葛特曼：共同问责中共活摘器官的同谋犯</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/4/n12665193.md#1">超逼真写实油画 描绘生活中的小小珍宝</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/12/14/n10910370.md#1">蓦然回首：中国书法震撼日本书画家之后</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12677191.md#1">【时事军事】共军激光照射 美军回敬新海洋战略</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/20/12/3/n12594207.md#1">【思想领袖】汉森：科技独裁下的新世界</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12676834.md#1">【横河直播】国会山暴力事件成大清洗借口？</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12676021.md#1">【更新】苹果谷歌下架Parler应用程序</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12678054.md#1">“我们都是川普”网民换头像斥推特封杀川普</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12678083.md#1">【重磅】蓬佩奥：解除美台交往限制</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12676634.md#1">刘嘉玲自曝有洁癖 拍戏时曾换掉酒店房间马桶</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/7/n12674191.md#1">陪朋友试镜 结果自己被选上出道的5位明星</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12676343.md#1">身形暴瘦传患大病 张家辉停工一年首露面</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12674476.md#1">张卫健留港陪伴母亲 因疫情与妻子分隔近一年</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12675852.md#1">BTS专辑连5年Gaon榜夺冠 美国实体销量也第一</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12677405.md#1">波兰房屋起火 “守护天使”盘旋空中</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12674814.md#1">【重播】全球确诊速升 除了口罩疫苗 自保这样做</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/10/n12678623.md#1">英媒：英军特种部队受训 抵抗外星人入侵</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/9/n12678002.md#1">病毒带来可怕精神疾病？精神科医师析4大原因</a></li>
-<li><a href="https://github.com/ieyoli3045/djy/blob/master/gb/21/1/8/n12674817.md#1">英网红缴清房贷让父亲提早退休 结局很意外</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ieyoli3045/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ieyoli3045/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/11/n12679658.htm">澳议员吁成立特别委员会 制衡社媒巨头</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/11/n12679658.htm">澳议员吁成立特别委员会 制衡社媒巨头</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ieyoli3045/djy/blob/master/gb/21/1/11/n12679658.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ieyoli3045/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ieyoli3045/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ieyoli3045/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ieyoli3045/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ieyoli3045/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/1/11/n12679658.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
